--- a/src/index.html
+++ b/src/index.html
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css">
-  <title>Vanilla JavaScript App</title>
-</head>
+<html>
+
+	<head>
+
+		<title>CV Jordy Callens</title>
+
+	</head>
 
 <body>
-  <main>
-    <h1>Vanilla JavaScript App</h1>
-  </main>
+
+
+
+	<h1>Jonathan Kortleven</h1>
+
+
+
 </body>
 
 </html>
