--- a/src/index.html
+++ b/src/index.html
@@ -12,10 +12,7 @@
 
 
 
-	<h1>Jordy Callens
-	Curriculum Vitae
-	
-	Examenopdracht Cloud 21/12/2022</h1>
+	<h1>Curriculum Vitae Jordy Callens</h1>
 
 
 
