--- a/src/index.html
+++ b/src/index.html
@@ -1,21 +1,10 @@
 <!DOCTYPE html>
 
 <html>
-
-	<head>
-
-		<title>CV Jordy Callens</title>
-
-	</head>
-
-<body>
-
-
-
-	<h1>Curriculum Vitae Jordy Callens</h1>
-
-
-
-</body>
-
+    <head><title>CV- Callens Jordy</title></head>
+    <body>
+        <center>
+        <img src="oude cv.png" alt="whoops, cv not found">
+        </center>
+    </body>
 </html>
