--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <html>
-    <head><title>CV- Callens Jordy</title></head>
+    <head><title>Curriculum Vitae Callens Jordy</title></head>
     <body>
         <center>
         <img src="oude cv.png" alt="whoops, cv not found">
